<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectMembershipActivity">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="You can change membership type anytime"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/pay2goLayout"
                    android:orientation="vertical"
                    android:background="@drawable/ic_layout_border2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/pay2goTextView"
                        android:gravity="center"
                        android:text="Pay 2 go"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:background="@drawable/ic_layout_underline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="96dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="12dp"
                            android:id="@+id/pay2goDescTextView"
                            android:textSize="16sp"
                            android:text="@string/pay2goDesc"/>
                        <Switch
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/pay2goSwitch"
                            android:layout_marginRight="12dp"
                            android:layout_marginLeft="12dp"
                            android:gravity="center"
                            android:checked="true"/>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/quarterYearLayout"
                    android:orientation="vertical"
                    android:background="@drawable/ic_layout_border2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/quarterYearTextView"
                        android:gravity="center"
                        android:text="@string/quarterYearText"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:background="@drawable/ic_layout_underline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="96dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="12dp"
                            android:id="@+id/quarterYearDescTextView"
                            android:textSize="16sp"
                            android:text="@string/quarterYearDesc"/>
                        <Switch
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/quarterYearSwitch"
                            android:layout_marginRight="12dp"
                            android:layout_marginLeft="12dp"
                            android:gravity="center" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/halfYearLayout"
                    android:orientation="vertical"
                    android:background="@drawable/ic_layout_border2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/annualTextView"
                        android:gravity="center"
                        android:text="@string/halfYearText"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:background="@drawable/ic_layout_underline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="96dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="12dp"
                            android:id="@+id/annualDescTextView"
                            android:textSize="16sp"
                            android:text="@string/halfYearDesc"/>
                        <Switch
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/halfYearSwitch"
                            android:layout_marginRight="12dp"
                            android:layout_marginLeft="12dp"
                            android:gravity="center" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/annualLayout"
                    android:orientation="vertical"
                    android:background="@drawable/ic_layout_border2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/halfYearTextView"
                        android:gravity="center"
                        android:text="@string/annualText"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:background="@drawable/ic_layout_underline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="96dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="12dp"
                            android:id="@+id/halfYearDescTextView"
                            android:textSize="16sp"
                            android:text="@string/annualDesc"/>
                        <Switch
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:id="@+id/annualSwitch"
                            android:layout_marginRight="12dp"
                            android:layout_marginLeft="12dp"
                            android:gravity="center" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>




        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="10dp"
            android:id="@+id/continueButton"
            android:text="Continue"
            android:background="@drawable/rounded_button_corner"
            android:layout_gravity="bottom|center"/>

    </FrameLayout>

</LinearLayout>
